k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cinebooker
  namespace: cinebooker
  labels:
    app: cinebooker
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cinebooker
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: cinebooker
    spec:
      automountServiceAccountToken: false
      containers:
      - name: cinebooker
        image: docker.io/sandeepkalathil/cinebooker:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 300m
            memory: 256Mi
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
