k8s/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: cinebooker
  labels:
    app: cinebooker
spec:
  selector:
    app: cinebooker
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  type: ClusterIP
