k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cinebooker
  namespace: cinebooker
  
spec:
  ingressClassName: nginx
  rules:
  - host: cinebooker.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cinebooker
            port:
              number: 80
  tls:
  - hosts:
    - cinebooker.duckdns.org
    secretName: cinebooker-tls
